# hello-computer

./: .gitignore  BILL_OF_MATERIALS.md  Makefile  README.md  SECURITY.md
config/: default.toml
python/: pyproject.toml
python/tests/: test_cli.py  test_config.py  test_diff_engine.py  test_integration.py  test_ipc.py  test_ledger.py  test_post_processor.py
python/vox/: __init__.py  cli.py  config.py  diff_engine.py  ipc.py  ledger.py  post_processor.py  utils.py
scripts/: install.sh  verify_security.sh
swift/: Package.swift
swift/Sources/CWhisper/: module.modulemap  shim.h
swift/Sources/CorrectionObserver/: CorrectionObserver.swift
swift/Sources/HotkeyListener/: AudioCapture.swift  HotkeyListener.swift  WhisperBridge.swift
swift/Sources/VoxCore/: Models.swift  TextInjector.swift
swift/Sources/VoxDaemon/: IPCServer.swift  Models.swift  TextInjector.swift  main.swift
swift/Tests/: CorrectionObserverTests.swift  VoxDaemonTests.swift
