[project]
name = "vox"
version = "0.1.0"
description = "Self-improving local voice-to-text agent for macOS"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "tomli-w",
    "click",
]

[project.optional-dependencies]
macos = ["pysqlcipher3"]

[project.scripts]
vox = "vox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
